--- a/baboon/style.css
+++ b/baboon/style.css
@@ -68,3 +68,11 @@ body{
     display: flex;
     justify-content: space-between;
 }
+.noimage{
+    background-image: url('images/noavatar.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 100%;
+    height: 300px;
+}
